--- a/css/styles.css
+++ b/css/styles.css
@@ -1,58 +1,150 @@
-.wrldslogo {
-    border-radius: 100px;
-    width: 100px;  
-}
+.container {
+    display: grid;
+    grid-template-columns: 0.7fr 1.2fr 1.1fr;
+    grid-template-rows: 0.3fr 0.6fr 2.8fr 0.3fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+  }
+  
+  
+  .Meny { grid-area: 1 / 3 / 2 / 4;
+    font-size: 20px;
+    padding: 10px;
+    margin: 20px;
+  }
 
-.login {
-    border-radius: 25px;
-    width: 50px;
-    position:absolute;
-}
-
-.main {
-    grid-area: main;
-}
-
-.footer {
-    grid-area: footer;
-}
-
-.menu {
-    font-size: 15px;
-    border: 1px solid;
-    align-items: center;
-    overflow: hidden;
-    color: black;
-    grid-area: menu;
-}
-
-.menu #mylinks {
-    display:none;
-    width: 300px;
-    height: 200px;
-    position: relative;
-    left: 900px;
-    top: 100px;
-    border: solid 1px;
-}
-
-.icon {
-    position: relative;
-    left : 1025px;
-    bottom: 60px;
-}
 
 a{
+  color: black;
+  padding: 20px;
+}
+
+  a:link {
+    text-decoration: none;
+  }
+  
+  a:visited {
+    text-decoration: none;
+  }
+  
+  a:hover {
+    text-decoration: underline;
+  }
+  
+  a:active {
+    text-decoration: underline;
+  }
+ 
+  .ForumListe {
+    display: grid;
+    grid-template-columns: 0.6fr 1.8fr 0.6fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      ". Lista ."
+      ". Lista ."
+      ". Lista .";
+    grid-area: 3 / 3 / 4 / 4;
+    height: 550px;
+  }
+  
+  ul {
+      padding: 10px;
+  }
+
+  li {
+    background-color: rgba(255, 228, 196, 0.726); 
+    padding: 20px;
+    margin: 20px;
+    border-radius: 25px;
+  }
+  
+  .Lista { grid-area: Lista;
+    font-size: 20px;
     padding: 10px;
-    color: black;  
+    background-color: rgba(255, 228, 196, 0.61);
+    height: auto;
+        }
+    
+    .kommentar {
+        font-size: 15px;
+        color:rgba(0,0,0, 0.5)
+    }
+  
+  .Logo { grid-area: 1 / 1 / 2 / 2; 
+    
+    font-size: 17px;
+    border: 3px solid black;
+    border-radius: 10px;
+    text-align: center;
+    margin: 10px;
+    width: 200px;
+    height: 80px;
+  }
+  
+  .Generelt-Forum {
+    display: grid; 
+    grid-auto-columns: 1fr; 
+    grid-template-columns: 100%; 
+    grid-template-rows: 1fr 1fr; 
+    gap: 0px 0px; 
+    grid-template-areas: 
+      "Forumbox"
+      "Forumbox"; 
+    grid-area: 3 / 2 / 4 / 3; 
+    
+  }
+    
+  .Forum-box {
+    grid-area: Forumbox;
+    padding: 20px;
+    margin: 20px;
+    background-color: rgba(197, 197, 197, 0.527);
+  }
+
+  
+  .Søkefelt { grid-area: 2 / 1 / 3 / 4; 
+    background-image: url(http://localhost/Termin%20Oppgave%20Tea%20poll%20and%20forum/bilder/download.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+    padding: 75px;
+    margin: 20px;
+  }
+  
+  .Søkebaren {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      ". . . "
+      "plassen plassen plassen"
+      ". search . ";
+    grid-area: 2 / 2 / 3 / 3;
+  }
+
+  
+.search{
+  grid-area:search;
 }
 
-
-.grid-main{
- display: grid;
- grid-template-rows: 1fr 1fr 1fr;
- grid-template-areas: 
- 'menu'
- 'main'
- 'footer';
+.plassen { grid-area: plassen;
+  text-align: center;
+  position: absolute;
+  font-size: 25px;
+  width: 50%;
 }
+  
+
+#SearchOfThaTea {
+  text-align: center;
+  padding: 10px;
+  position: relative;
+  font-size: 25px;
+  width: 100%;
+}
+  .Powered-By-Ev1 { grid-area: 4 / 2 / 5 / 3; }
+  
