--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
   }
   
   
-  .Meny { grid-area: 1 / 3 / 2 / 4;
+  .Meny { grid-area: Meny;
     font-size: 20px;
     padding: 10px;
     margin: 20px;
@@ -146,5 +146,6 @@ a{
   font-size: 25px;
   width: 100%;
 }
+
   .Powered-By-Ev1 { grid-area: 4 / 2 / 5 / 3; }
   
