--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
   }
   
   
-  .Meny { grid-area: Meny;
+  .Meny { grid-area: 1 / 3 / 2 / 4;
     font-size: 20px;
     padding: 10px;
     margin: 20px;
