--- a/css/styles.css
+++ b/css/styles.css
@@ -120,9 +120,9 @@ a{
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
-      ". . . "
-      "plassen plassen plassen"
-      ". search . ";
+      "."
+      "plassen"
+      "search";
     grid-area: 2 / 2 / 3 / 3;
   }
 
@@ -135,7 +135,7 @@ a{
   text-align: center;
   position: absolute;
   font-size: 25px;
-  width: 50%;
+  width: 100%;
 }
   
 
