--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@ a{
 
   
   .Søkefelt { grid-area: 2 / 1 / 3 / 4; 
-    background-image: url(http://localhost/Termin%20Oppgave%20Tea%20poll%20and%20forum/bilder/download.jpg);
+    background-image: url(http://localhost/TerminOppgave/bilder/download.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
@@ -131,13 +131,15 @@ a{
   grid-area:search;
 }
 
+
 .plassen { grid-area: plassen;
   text-align: center;
-  position: absolute;
   font-size: 25px;
-  width: 100%;
 }
   
+.knapp {
+  visibility: hidden;
+}
 
 #SearchOfThaTea {
   text-align: center;
