--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@ a{
 
   
   .Søkefelt { grid-area: 2 / 1 / 3 / 4; 
-    background-image: url(http://localhost/TerminOppgave/bilder/download.jpg);
+    background-image: url(http://localhost/Termin%20Oppgave%20Tea%20poll%20and%20forum/bilder/download.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
