--- a/css/stylesSignUpLogIn.css
+++ b/css/stylesSignUpLogIn.css
@@ -1,13 +1,54 @@
 .container {  display: grid;
-    grid-template-columns: 0.7fr 1.5fr 0.8fr;
-    grid-template-rows: 0.5fr 2fr 0.5fr;
+    grid-template-columns: 0.7fr 1.6fr 0.7fr;
+    grid-template-rows: 0.3fr 1.7fr;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
-      ". . ."
-      ". Login-Form ."
-      ". . .";
+      ". . Meny"
+      ". Login-Form .";
+  }
+
+  .Meny { grid-area: Meny;
+    font-size: 20px;
+    padding: 10px;
+    margin: 20px;
+  }
+    
+  a{
+    color: black;
+    padding: 20px;
+  }
+
+    a:link {
+    text-decoration: none;
   }
   
-  .Login-Form { grid-area: Login-Form; }
+  a:visited {
+    text-decoration: none;
+  }
   
+  a:hover {
+    text-decoration: underline;
+  }
+  
+  a:active {
+    text-decoration: underline;
+  }
+  
+  .Login-Form { 
+      grid-area: Login-Form; 
+      margin: 50px;
+      padding: 150px;
+      text-align: center;
+      background-color: rgba(255, 228, 196);
+      border: 2px black dotted;
+    }
+
+    input {
+        font-size: 25px;;
+        padding: 50px;
+    }
+
+    button {
+      font-size: 15px;
+    }
