--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,10 @@
     grid-auto-flow: row;
   }
   
-  
+  body {
+    font-family: 'Raleway', sans-serif;
+  }
+
   .Meny { grid-area: 1 / 3 / 2 / 4;
     font-size: 20px;
     padding: 10px;
