--- a/css/stylesProfile.css
+++ b/css/stylesProfile.css
@@ -8,7 +8,9 @@
       "Navn Head ."
       ". Forum .";
   }
-  
+  body {
+    font-family: 'Raleway', sans-serif;
+  }
   .Logo { grid-area: Logo; 
     font-size: 17px;
     border: 3px solid black;
@@ -21,7 +23,10 @@
   
   .Navn { grid-area: Navn; }
   
-  .Head { grid-area: Head; }
+  .Head { 
+    grid-area: Head; 
+    text-align: center;
+  }
   
   .Menu { grid-area: Meny;
     font-size: 20px;
