--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 .container {
     display: grid;
     grid-template-columns: 0.7fr 1.2fr 1.1fr;
-    grid-template-rows: 0.3fr 0.6fr 2.8fr 0.3fr;
+    grid-template-rows: auto;
     gap: 0px 0px;
     grid-auto-flow: row;
   }
