--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@ a{
 
   
   .Søkefelt { grid-area: 2 / 1 / 3 / 4; 
-    background-image: url(http://localhost/TerminOppgave/bilder/download.jpg);
+    background-image: url(http://10.2.2.148/TerminOppgave/bilder/download.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
