--- a/css/stylesAdmin.css
+++ b/css/stylesAdmin.css
@@ -1,10 +1,10 @@
 .container {  display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr, 1fr;
+    grid-template-rows: 1fr auto;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
-      "Logo auto"
+      "Logo Meny"
       "FAQ Contact"
       "FAQ Contact";
   }
@@ -17,13 +17,13 @@
     input{
         padding: 10px;
         margin: 20px;
-        width: 100%; 
+        width: 75%; 
     }
 
     textarea{
         padding: 10px;
         margin: 20px;
-        width: 100%; 
+        width: 75%; 
     }
 
 
@@ -38,8 +38,15 @@
         height: 80px;
       }
   
+      .Help-box {
+        grid-area: Forumbox;
+        padding: 20px;
+        margin: 20px;
+        background-color: rgba(197, 197, 197, 0.527);
+      }
+
   .Meny { 
-    grid-area: 1 / 3 / 2 / 4;
+    grid-area: Meny;
     font-size: 20px;
     padding: 10px;
     margin: 20px; }
