--- a/css/stylesSignUpLogIn.css
+++ b/css/stylesSignUpLogIn.css
@@ -3,8 +3,8 @@
   grid-template-rows: 0.3fr 1.9fr; 
   gap: 50px 50px; 
   grid-template-areas:
-    ". . Meny"
-    ". Login-Form Disclaimer";
+    ". Title Meny"
+    "Disclaimer Login-Form .";
 }
 
 body {
@@ -29,6 +29,11 @@ body {
 }
 
 form {
+  text-align: center;
+}
+
+.title {
+  grid-area: Title;
   text-align: center;
 }
 
